syntax = "proto3";


option go_package = "github.com/vasconcelosvcd/grpc-server/api/doubleNum";

package doubleNum;

// The DoubleNum service definition
service DoubleNum{
  rpc DoubleNum (DoubleNumRequest) returns (DoubleNumResponse) {}
}

message DoubleNumRequest{
  int32 num = 1;
}

message DoubleNumResponse{
  int32 doubled = 1;
}